--- a/Who owns lausanne.ipynb
+++ b/Who owns lausanne.ipynb
@@ -27,36 +27,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<?xml version='1.0' encoding=\"UTF-8\" ?>\r\n",
-      "<wfs:FeatureCollection\r\n",
-      "   xmlns:ms=\"http://mapserver.gis.umn.edu/mapserver\"\r\n",
-      "   xmlns:gml=\"http://www.opengis.net/gml\"\r\n",
-      "   xmlns:wfs=\"http://www.opengis.net/wfs\"\r\n",
-      "   xmlns:ogc=\"http://www.opengis.net/ogc\"\r\n",
-      "   xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"\r\n",
-      "   xsi:schemaLocation=\"http://mapserver.gis.umn.edu/mapserver http://map.lausanne.ch/prod/mapserv?SERVICE=WFS&amp;VERSION=1.1.0&amp;REQUEST=DescribeFeatureType&amp;TYPENAME=feature:bdcad_bf_parc_pol&amp;OUTPUTFORMAT=text/xml;%20subtype=gml/3.1.1  http://www.opengis.net/wfs http://schemas.opengis.net/wfs/1.1.0/wfs.xsd\">\r\n",
-      "      <gml:boundedBy>\r\n",
-      "      \t<gml:Envelope srsName=\"EPSG:21781\">\r\n",
-      "      \t\t<gml:lowerCorner>534766.520000 155512.530000</gml:lowerCorner>\r\n",
-      "      \t\t<gml:upperCorner>535272.590000 155972.950000</gml:upperCorner>\r\n",
-      "      \t</gml:Envelope>\r\n",
-      "      </gml:boundedBy>\r\n",
-      "    <gml:featureMember>\r\n",
-      "      <ms:bdcad_bf_parc_pol gml:id=\"bdcad_bf_parc_pol.6341399\">\r\n",
-      "        <gml:boundedBy>\r\n",
-      "        \t<gml:Envelope srsName=\"EPSG:21781\">\r\n",
-      "        \t\t<gml:lowerCorner>535084.180000 155732.304000</gml:lowerCorner>\r\n",
-      "        \t\t<gml:upperCorner>535272.590000 155935.350000</gml:upperCorner>\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!head -n 20 scraped/534810.4210526316_155847.0_535161.3710526315_155589.0.xml"
    ]
@@ -76,27 +49,423 @@
     "\n",
     "### joining the owners data with the cadastre shapefiles\n",
     "\n",
-    "The result of the previous preprocessing steps is a csv file with three columns: commune number, parcel number, and owner name. We would like to add the owner name to the attributes of the parcels shapefile that we obtained from \"Office du Cadastre\". To do so, we import the csv and the shapefile in QGIS, and we join this two \"tables\" by parcel number. The resulting geographical layer contains all the geographical features representing the parcels, and additionally the owner name for each parcel. We can now export this layer as a GeoJSON, and continue our exploration in a jupyter notebook."
+    "The result of the previous preprocessing steps is a csv file with three columns: commune number, parcel number, and owner name. We would like to add the owner name to the attributes of the parcels shapefile that we obtained from \"Office du Cadastre\". To do so, we import the csv and the shapefile in QGIS, and we join this two \"tables\" by parcel number. The resulting geographical layer contains all the geographical features representing the parcels, and additionally the owner name for each parcel. We can now export this layer as a GeoJSON, making sure of using WGS-84 as the coordinate system,  and continue our exploration in a jupyter notebook."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data exploration\n",
+    "\n",
+    "We now have a GeoJSON, containing parcel geometries and parcel owners."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#imports\n",
+    "import json\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import folium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('data/parcelles_wgs84.geojson') as geojson:\n",
+    "    geo = json.load(geojson)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# geo.features contains the list of parcelles\n",
+    "# example:\n",
+    "geo['features'][0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can load the attributes of each geographical feature in pandas, so that it will be easy to analyse it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = [{'parc_num':feature['properties']['NO_PARC'], 'owner':feature['properties']['proprio']} for feature in geo['features']]\n",
+    "parcels = pd.DataFrame.from_records(features)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Biggest real estate owners\n",
+    "\n",
+    "We can now quickly answer questions such as who are the 30 biggest property owners in Lausanne, by using the number of parcels owned as to measure \"bigness\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parcels_per_owner = parcels['owner'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parcels_per_owner.head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(parcels_per_owner.values, log=True, bins=100);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#compute portion of missing values\n",
+    "parcels['owner'].isna().mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Propriété par étages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check portion of parcels owned by PPE\n",
+    "parcels['owner'].astype('str').str.contains('PPE').mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Unique owners"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "owners = parcels['owner'].dropna()\n",
+    "len(owners)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have just under 8k parcels in Lausanne, let's check how many people/societies own them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(owners.unique())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This number doesn't account for PPE. A lower bound on the owners can be estimated by discarding PPE all-together."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(owners[~owners.str.contains('PPE ')].unique())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a lower bound for the number of owners, although the real number is likely to be much higher since it's unlikely that all of these owners are also owners of every PPE share."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## counting the number of PPE shares\n",
+    "With Propriété par étage, each building is divided in several shares, and has multiple owners. We don't have the owners for the PPE, but we can estimate the total number of PPE shares. An upper bound for the number of owners would be attributing a distinct owner to every PPE share."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "owners[owners.str.contains('PPE ')].head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that PPE information is formatted in several ways:\n",
+    "\n",
+    "- ranges where the first number is fixed, and a suffix is added for each share: `PPE parcelles 3476-1 à 3476-6`\n",
+    "- ranges where the number represent the PPE share identifier: `PPE parcelles 16584 à 16609`\n",
+    "- ranges mixed with single values: `PPE parcelles 7502 à 7512, 20561, 20562`\n",
+    "\n",
+    "Parsing this values is not particularly challenging but it is boring, I'll think of it another time **TODO**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualizing the distribution of missing values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "for 22% of the parcels we don't have owner information. Indeed, many parcels reperesent roads, and as such they didn't have an owner on the site we scraped. Also we didn't scrape the values for the northern part of Lausanne, which is mostly farmland and woods.\n",
+    "Let's try to visualize the missing values on a map."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TODO: show maps of missing values\n",
+    "import folium\n",
+    "def getMap():\n",
+    "    return folium.Map([46.55, 6.63], tiles='cartodbpositron', zoom_start=12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map = getMap()\n",
+    "\n",
+    "def style_function(feature):\n",
+    "    return {\n",
+    "        'fillColor':\n",
+    "            '#FF0000' if feature['properties']['proprio'] is None\\\n",
+    "            else '#0000FF', #red for missing value, blue for valid\n",
+    "        'stroke': False #disable borders\n",
+    "    }\n",
+    "\n",
+    "geo_fol = folium.GeoJson(geo, style_function=style_function)\n",
+    "\n",
+    "map.add_child(geo_fol)\n",
+    "map"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This visualization is not very snappy or legible, but we can interpret it as follow:\n",
+    "\n",
+    "- Red areas are parcels for which the proprietary is `None`. The northern parts of Lausanne were not scraped, since we didn't want to overload the scraped website and anyway they're mostly rural. So it is expected that they are red.\n",
+    "- Zooming into central Lausanne, we see that roads have unknown owners. This is also expected.\n",
+    "- Some areas are an overlap of Blue and Red, yielding purple parcels. This is because the dataset is slightly dirty, and some bigger parcels with no owner contain in their surface smaller parcels with known owners.\n",
+    "\n",
+    "Having asserted that the dataset is fairly sane, we can drop the features were owner is `None`, since they will be of no use to us, and will make map drawing slower."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "geo_clean = geo.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "geo_clean['features'] = [f for f in geo['features'] if f['properties']['proprio'] is not None]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(geo_clean['features']), len(geo['features'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "owners.value_counts().head(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def categorize(owner):\n",
+    "    if owner is None:\n",
+    "        return None\n",
+    "    owner = owner.lower()\n",
+    "    \n",
+    "    if owner == 'commune de lausanne' or\\\n",
+    "        'dfire' in owner or\\\n",
+    "        'cff' in owner:\n",
+    "        return 'public'\n",
+    "    elif 'retraites' in owner or\\\n",
+    "        'pensions' in owner or\\\n",
+    "        'prévoyance' in owner:\n",
+    "        return 'pension'\n",
+    "    elif 'fondation' in owner:\n",
+    "        return 'foundation'\n",
+    "    elif ' s.a.' in owner or\\\n",
+    "        ' sa' in owner or\\\n",
+    "        ' ag' in owner or\\\n",
+    "        'société anonyme' in owner:\n",
+    "        return 'AG'\n",
+    "    elif 'ppe ' in owner or\\\n",
+    "        'copropriété' in owner:\n",
+    "        return 'PPE'\n",
+    "    elif 'société coopérative' in owner:\n",
+    "        return 'coop'\n",
+    "    else:\n",
+    "        return 'private' #not true but let's approximate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "owners_categories = owners.to_frame()\n",
+    "owners_categories['category'] = owners.apply(categorize)\n",
+    "owners_categories = owners_categories.drop_duplicates().set_index('owner')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map = getMap()\n",
+    "\n",
+    "def style_function(feature):\n",
+    "    colors = {\n",
+    "        'coop': 'yellow',\n",
+    "        'AG' : 'red',\n",
+    "        'public' : 'green',\n",
+    "        'private': 'blue',\n",
+    "        'PPE': 'orange',\n",
+    "        'pension': 'purple',\n",
+    "        'foundation' : 'brown'\n",
+    "        \n",
+    "    }\n",
+    "    owner = feature['properties']['proprio']\n",
+    "    cat = owners_categories.loc[owner][0]\n",
+    "    \n",
+    "    return {\n",
+    "        'stroke':False,\n",
+    "        'fillColor': colors[cat]\n",
+    "    }\n",
+    "\n",
+    "folium.GeoJson(geo_clean, style_function=style_function, tooltip=folium.GeoJsonTooltip(['proprio'])).add_to(map)\n",
+    "map"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TODO\n",
+    "\n",
+    "- more robust categorizing, maybe use https://www.zefix.admin.ch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Questions\n",
+    "\n",
+    "- How to use Folium without an internet connection?"
    ]
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
