--- a/Who owns lausanne.ipynb
+++ b/Who owns lausanne.ipynb
@@ -11,14 +11,14 @@
     "We obtained from the Lausanne office of cadastre ftp access to cadastral data. It is a collection of ESRI shapefiles, describing roads, buildings, parcels, trees, waterbodies, and others.\n",
     "Each shapefile is a collection of features, and each feature has an associated geometry (e.g. the shape of a land parcel) and associated attributes ( e.g. the commune responsible for the parcel, the parcel number).\n",
     "\n",
-    "We can explore this dataset by using GIS software that supports shapefiles. We used QGIS to \n",
+    "We can explore this dataset by using GIS software that supports shapefiles. We used QGIS to explore the dataset.\n",
     "We hoped to find an attribute describing the parcel owner in the parcel shapefile layer, but it wasn't there.\n",
     "We had to resort to web scraping to recover this attribute.\n",
     "\n",
     "### Web scraping\n",
     "\n",
     "We wanted to associate each parcel in Lausanne to an owner. To do this, we divided Lausanne's surface in rectangles, and requested parcel informations for these rectangles to a service exposing the owners name.\n",
-    "The code for the scraping is in `scrape.py`.\n",
+    "The code for the scraping is in [`scrape.py`](/edit/scrape.py).\n",
     "\n",
     "## Data munging\n",
     "\n",
@@ -31,7 +31,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!head -n 20 scraped/534810.4210526316_155847.0_535161.3710526315_155589.0.xml"
+    "!ls \"scraped/\" | wc -l"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Each file is named after the coordinates, in the Swiss systems, of the top-left and bottom-right points bounding the scraped rectangle."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ls \"scraped\" 2>/dev/null | head -10 #suppress stupid error message by redirecting errors to null"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!head -n 20 \"scraped/534810.4210526316_155847.0_535161.3710526315_155589.0.xml\""
    ]
   },
   {
@@ -108,8 +133,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = [{'parc_num':feature['properties']['NO_PARC'], 'owner':feature['properties']['proprio']} for feature in geo['features']]\n",
-    "parcels = pd.DataFrame.from_records(features)"
+    "features = [\n",
+    "    {'parc_num':feature['properties']['NO_PARC'],\n",
+    "    'owner':feature['properties']['proprio']} for feature in geo['features']\n",
+    "]\n",
+    "parcels = pd.DataFrame.from_records(features)\n",
+    "parcels.head()"
    ]
   },
   {
@@ -136,7 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "parcels_per_owner.head(20)"
+    "parcels_per_owner.head(50)"
    ]
   },
   {
@@ -196,7 +225,8 @@
    "outputs": [],
    "source": [
     "owners = parcels['owner'].dropna()\n",
-    "len(owners)"
+    "print('total parcels', len(owners))\n",
+    "print('unique owners', len(owners.unique()))"
    ]
   },
   {
@@ -204,15 +234,6 @@
    "metadata": {},
    "source": [
     "We have just under 8k parcels in Lausanne, let's check how many people/societies own them."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(owners.unique())"
    ]
   },
   {
@@ -292,7 +313,7 @@
     "#TODO: show maps of missing values\n",
     "import folium\n",
     "def getMap():\n",
-    "    return folium.Map([46.55, 6.63], tiles='cartodbpositron', zoom_start=12)"
+    "    return folium.Map([46.55, 6.63], tiles='cartodbpositron', zoom_start=13)"
    ]
   },
   {
@@ -306,9 +327,9 @@
     "def style_function(feature):\n",
     "    return {\n",
     "        'fillColor':\n",
-    "            '#FF0000' if feature['properties']['proprio'] is None\\\n",
-    "            else '#0000FF', #red for missing value, blue for valid\n",
-    "        'stroke': False #disable borders\n",
+    "            'red' if feature['properties']['proprio'] is None\\\n",
+    "            else 'blue', #red for missing value, blue for valid\n",
+    "        'stroke': False\n",
     "    }\n",
     "\n",
     "geo_fol = folium.GeoJson(geo, style_function=style_function)\n",
@@ -345,7 +366,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "geo_clean['features'] = [f for f in geo['features'] if f['properties']['proprio'] is not None]"
+    "geo_clean['features'] =\\\n",
+    "    [feature for feature in geo['features']\n",
+    "     if feature['properties']['proprio'] is not None]"
    ]
   },
   {
@@ -358,12 +381,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "owners.value_counts().head(50)"
+    "## Show parcels by owner type"
    ]
   },
   {
@@ -449,7 +470,8 @@
    "source": [
     "# TODO\n",
     "\n",
-    "- more robust categorizing, maybe use https://www.zefix.admin.ch"
+    "- more robust categorizing, maybe use https://www.zefix.admin.ch\n",
+    "- find habitable volume for each parcel "
    ]
   },
   {
