fix broken link

--- a/Who owns lausanne.ipynb
+++ b/Who owns lausanne.ipynb
@@ -18,7 +18,7 @@
     "### Web scraping\n",
     "\n",
     "We wanted to associate each parcel in Lausanne to an owner. To do this, we divided Lausanne's surface in rectangles, and requested parcel informations for these rectangles to a service exposing the owners name.\n",
-    "The code for the scraping is in [`scrape.py`](/edit/scrape.py).\n",
+    "The code for the scraping is in [`scrape.py`](/edit/scraping/geodata/scrape.py).\n",
     "\n",
     "## Data munging\n",
     "\n",
