display rent data on map

--- a/Who owns lausanne.ipynb
+++ b/Who owns lausanne.ipynb
@@ -139,9 +139,6 @@
     "import seaborn as sns\n",
     "sns.set()\n",
     "\n",
-    "from IPython.core.interactiveshell import InteractiveShell\n",
-    "InteractiveShell.ast_node_interactivity = \"all\"\n",
-    "\n",
     "from IPython.display import set_matplotlib_formats\n",
     "set_matplotlib_formats('retina')"
    ]
@@ -349,7 +346,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: show maps of missing values\n",
     "import folium\n",
     "def getMap():\n",
     "    return folium.Map([46.55, 6.63], tiles='cartodbpositron', zoom_start=13)"
@@ -507,19 +503,110 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TODO\n",
-    "\n",
-    "- more robust categorizing, maybe use https://www.zefix.admin.ch\n",
-    "- find habitable volume for each parcel "
+    "# 3. Rents data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Questions\n",
+    "## 3.1 Scraping\n",
     "\n",
-    "- How to use Folium without an internet connection?"
+    "**TODO**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.2 Removing duplicates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.3 Mapping street addresses to coordinates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.2 Visualizing rents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rent_prices = json.load(open('data/rents/rent_prices.json'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quartiers = json.load(open('data/quartiers.geojson'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for offer in rent_prices:\n",
+    "    offer['CHF/m2'] = float(offer['price'])/float(offer['surface'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = getMap()\n",
+    "folium.GeoJson(quartiers).add_to(m)\n",
+    "for offer in rent_prices:\n",
+    "    folium.Marker(offer['position'], popup=offer['price']).add_to(m)\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that several points fall outside of the city borders. But we still have a significant number of avaialable datapoints."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.3 Mapping rent datapoints to quartiers\n",
+    "We can use the python library `shapely` to find the quartier for each rent offer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TODO\n",
+    "\n",
+    "- more robust categorizing, maybe use https://www.zefix.admin.ch\n",
+    "- find habitable volume for each parcel "
    ]
   }
  ],
