map rent points to quartier

--- a/Who owns lausanne.ipynb
+++ b/Who owns lausanne.ipynb
@@ -597,16 +597,56 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "quartier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from shapely.geometry import Point, Polygon\n",
+    "#geojson has inversed coordinates\n",
+    "for offer in rent_prices:\n",
+    "    offer['quartier'] = None\n",
+    "    for quartier in quartiers['features']:\n",
+    "        if quartier['properties']['Name'] == '90 - Zones foraines':\n",
+    "            continue #skip because we don't have owner data and it is a multypoligon instead of polygon\n",
+    "        offer_pos = Point(offer['position'])\n",
+    "        quartier_vertices = [(y, x) for x, y, z in quartier['geometry']['coordinates'][0]]\n",
+    "        quartier_poly = Polygon(quartier_vertices)\n",
+    "        if quartier_poly.contains(offer_pos):\n",
+    "            offer['quartier'] = quartier['properties']['Name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rents_per_quartier = pd.DataFrame.from_dict(rent_prices)\n",
+    "rents_per_quartier[['CHF/m2','quartier']].head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#display median price per neighborhood\n",
+    "rents_per_quartier[['CHF/m2', 'quartier']].groupby('quartier').agg('median')"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TODO\n",
-    "\n",
-    "- more robust categorizing, maybe use https://www.zefix.admin.ch\n",
-    "- find habitable volume for each parcel "
+    "# 4. Linear model describing relation of ownership and price\n",
+    "Next, we will try to extract further insight from the data"
    ]
   }
  ],
